test/bad/func-as-var.mac



int foo() {
    return 0;
}


int main() {
    int a = foo * 2;
    return 0;
}